--- a/css/templatemo-blue.css
+++ b/css/templatemo-blue.css
@@ -29,6 +29,9 @@ h2 {
   padding-bottom: 14px;
 }
 
+a:hover {
+  text-decoration: none;
+}
 .accent {
   font-family: 'Proxima Bold';
   line-height: 14px;
